🐛 fix(HomePageComponent): Page going out of screen size

--- a/src/app/views/pages/home-page/home-page.component.scss
+++ b/src/app/views/pages/home-page/home-page.component.scss
@@ -6,6 +6,8 @@
 	align-items: center;
 	justify-content: space-between;
 	padding: 0px;
+	box-sizing: border-box;
+	overflow: hidden;
 
 	width: 100%;
 	height: 100vh;
@@ -58,6 +60,8 @@
 		gap: 20px;
 
 		width: 100%;
+		max-width: 100%;
+		max-height: 100%;
 	}
 
 	app-footer, app-header, app-inputs, app-result
